--- a/weather-project/style.css
+++ b/weather-project/style.css
@@ -1,7 +1,36 @@
 
+
+body{
+    padding: 0;
+    margin: 0;
+}
 .weather {
     text-align: center;
+    height: 100vh;
+    background:url(./img/sun-clouds.jpeg);
+    background-size:cover;
+    background-position:center 0;
+    overflow:hidden;
+    position:relative;
 }
 ul {
     list-style: none;
 }
+
+
+.card {
+    margin: 10px auto;
+    width: 20%;
+    font-size: 1.6rem;
+    padding: 0.8rem;
+    line-height: 2rem;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.25s;
+    border-radius: 8px;
+    background: rgba(248, 248, 248, 0.8);
+  }
+
+  #get-weather-button {
+      padding: 7px 12px;
+  }
+ 
